[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/Menu.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/buttons/join.png" type="Texture" id=4]
[ext_resource path="res://interface/buttons/join-pressed.png" type="Texture" id=5]
[ext_resource path="res://interface/buttons/create.png" type="Texture" id=6]
[ext_resource path="res://interface/buttons/create-pressed.png" type="Texture" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 113.0
margin_right = 480.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1

[node name="NameLabel" type="Label" parent="."]
margin_top = 275.0
margin_right = 480.0
margin_bottom = 327.0
custom_fonts/font = ExtResource( 2 )
text = "Your Name:"
align = 1

[node name="TextField" type="LineEdit" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -25.0
margin_right = -25.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
max_length = 12

[node name="JoinButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -354.0
margin_right = 240.0
margin_bottom = -254.0
rect_min_size = Vector2( 192, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="CreateButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -204.0
margin_right = 240.0
margin_bottom = -104.0
rect_min_size = Vector2( 192, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[connection signal="text_changed" from="TextField" to="." method="_on_TextField_text_changed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
